--- a/mysql/deploy/deployment.yaml
+++ b/mysql/deploy/deployment.yaml
@@ -37,3 +37,5 @@ spec:
               secretKeyRef:
                 name: pipeline-mysql-secret
                 key: MYSQL_ROOT_PASSWORD
+          ports:
+          - containerPort: 3306
