--- a/mysql/deploy/deployment.yaml
+++ b/mysql/deploy/deployment.yaml
@@ -42,5 +42,6 @@ spec:
               configMapKeyRef:
                 name: db-conf
                 key: name
+          args: ["--default-authentication-plugin=mysql_native_password"]
           ports:
           - containerPort: 3306
