--- a/wordpress/deploy/deployment.yaml
+++ b/wordpress/deploy/deployment.yaml
@@ -40,6 +40,8 @@ spec:
               secretKeyRef:
                 name: pipeline-mysql-secret
                 key: MYSQL_ROOT_PASSWORD
+          - name: WORDPRESS_DB_USER
+            value: root
           - name: PMA_ARBITRARY
             value: "1"   
           ports:
