--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
 # VS Code 
 .history
 .vscode
+
+# ignore everything in the root except the "wordpress/app/wp-content" directory.
+!app/wp-content/
+
+app/wp-config.php
+
+# ignore everything in the "app/wp-content" directory, except:
+# "mu-plugins", "plugins", "themes" directory
+wordpress/app/wp-admin/
+wordpress/app/wp-includes/
+wordpress/app/wp-content/*
+!wordpress/app/wp-content/mu-plugins/
+!wordpress/app/wp-content/plugins/
+!wordpress/app/wp-content/themes/
+
+# ignore these plugins
+wordpress/app/wp-content/plugins/hello.php
+
+# ignore specific themes
+wordpress/app/wp-content/themes/twenty*/
+
+# ignore node dependency directories
+node_modules/
+
+# ignore log files and databases
+*.log
+*.sql
+*.sqlite
+
+data/
