--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -1,7 +1,7 @@
 FROM wordpress:latest
 
 # Add sudo in order to run wp-cli as the www-data user 
-RUN apt-get update && apt-get install -y sudo
+RUN apt-get update && apt-get install -y sudo less
 
 # Add WP-CLI 
 RUN curl -o /bin/wp-cli.phar https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
@@ -12,6 +12,7 @@ RUN chmod +x /bin/wp-cli.phar /bin/wp
 RUN apt-get clean
 RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-COPY ./app /var/www/html
+# COPY ./app  /var/www/html
+ADD ./app /var/www/html
 
 EXPOSE 80
