test copy + run script

--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -15,10 +15,10 @@ RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 # COPY ./app  /var/www/html
 # ADD ./app/* /var/www/html/
 
-VOLUME [ "/var/www/html" ]
+# VOLUME [ "/var/www/html" ]
 
 COPY --chown=www-data:www-data app /var/www/html/
 
-RUN [ -d "/var/www/html/wp-admin" && ! -h "/var/www/html/wp-admin" ] && echo "Directory /var/www/html/wp-admin exists." || echo "Error: Directory /var/www/html/wp-admin exists but point to $(readlink -f /var/www/html/wp-admin)."
+# RUN [ -d "/var/www/html/wp-admin" && ! -h "/var/www/html/wp-admin" ] && echo "Directory /var/www/html/wp-admin exists." || echo "Error: Directory /var/www/html/wp-admin exists but point to $(readlink -f /var/www/html/wp-admin)."
 
 EXPOSE 80
