--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -11,6 +11,8 @@ VOLUME [ "/var/www/html" ]
 
 WORKDIR /app
 
-COPY --chown=www-data ./app /var/www/html/
+RUN cp -R ./* /var/www/html/
+
+# COPY --chown=www-data ./app /var/www/html/
 
 EXPOSE 80
