--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -10,8 +10,7 @@ RUN chmod +x /bin/wp-cli.phar /bin/wp && apt-get clean && rm -rf /var/lib/apt/li
 VOLUME [ "/var/www/html" ]
 
 WORKDIR /app
-USER root
-RUN cp -R /app/ /var/www/html/
+COPY . /var/www/html/ -wp-admin/
 
 # COPY --chown=www-data ./app /var/www/html/
 
