--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -10,7 +10,7 @@ RUN chmod +x /bin/wp-cli.phar /bin/wp && apt-get clean && rm -rf /var/lib/apt/li
 VOLUME [ "/var/www/html" ]
 
 WORKDIR /app
-COPY . /var/www/html/ -wp-admin/
+COPY ./app/ /var/www/html/
 
 # COPY --chown=www-data ./app /var/www/html/
 
