--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -7,11 +7,11 @@ COPY wp-su.sh /bin/wp
 
 RUN chmod +x /bin/wp-cli.phar /bin/wp && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-VOLUME [ "/var/www/html" ]
+VOLUME [ "/var/www/html","/app" ]
 
 WORKDIR /app
-# ADD --chown=www-data:www-data ./app/ /var/www/html/
-RUN cp -r /app/ /var/www/html/
+COPY --chown=www-data:www-data ./app/ /var/www/html/
+# RUN cp -r /app/ /var/www/html/
 
 # COPY --chown=www-data ./app /var/www/html/
 
