--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -7,7 +7,7 @@ COPY wp-su.sh /bin/wp
 
 RUN chmod +x /bin/wp-cli.phar /bin/wp && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-VOLUME [ "/var/www/html","/app" ]
+VOLUME [ "/var/www/html" ]
 
 WORKDIR /app
 COPY --chown=www-data:www-data ./app/ /var/www/html/
