--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -1,31 +1,28 @@
 FROM wordpress:latest
 
-# Install xdebug
-# RUN pecl install xdebug && docker-php-ext-enable xdebug && apt-get update && apt-get -y install less && curl -s -o /usr/local/bin/wp \
-#     https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
-#     && chmod +x /usr/local/bin/wp
+# Add sudo in order to run wp-cli as the www-data user 
+RUN apt-get update && apt-get install -y sudo less default-mysql-client
 
-# VOLUME [ "/var/www/html" ]
+# Add WP-CLI 
+RUN curl -o /bin/wp-cli.phar https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+COPY wp-su.sh /bin/wp
+RUN chmod +x /bin/wp-cli.phar /bin/wp
 
-# WORKDIR /var/www/html
+# Cleanup
+RUN apt-get clean
+RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-# RUN useradd -d /app -s /bin/bash app \
-#  && chown -R app . && sudo apt-get update
-# USER app
+# WORKDIR /app
 
-# USER www-data
+COPY . .
+
+RUN wp --allow-root core download --force
+
+
+# COPY --from=wordpress ./ /var/www/html/
 
 # CMD cd ./app && wp --allow-root core download
 
-# USER daemon
-
-# CMD wp core config \
-# USER root
-
-# Add sudo in order to run wp-cli as the www-data user 
-# RUN apt-get update && apt-get install -y sudo less unzip && curl -o /bin/wp-cli.phar https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-
-# COPY wp-su.sh /bin/wp
 
 # RUN chmod +x /bin/wp-cli.phar /bin/wp && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 #     --dbhost=${MYSQL_HOST:-db}:${MYSQL_PORT:-3306} \
