--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -15,7 +15,7 @@ RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 # WORKDIR /app
 # USER root
 
-COPY --chown=www-data:www-data ./app/ .
+COPY --chown=www-data:www-data ./app .
 
 # RUN wp --allow-root core download --force
 
