modification header.php

--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -14,8 +14,11 @@ RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # WORKDIR /wordpress/app
 # USER root
+VOLUME [ "/data" ]
+VOLUME [ "/wordpress/app" ]
 
-COPY --chown=www-data:www-data ./app/. .
+CMD cd ./app
+COPY --chown=www-data:www-data ./ .
 
 # RUN wp --allow-root core download --force
 
